# tauri-wysiwyg-md

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-all-commands.toml  allow-window-dragging.toml
src-tauri/src/: main.rs
src-tauri/src/convert/: docx.rs  mod.rs  pdf.rs  pptx.rs  xlsx.rs
src/components/: ThemeSelector.tsx
src/components/Editor/: CodeBlockNodeView.tsx  Editor.tsx  FindBar.tsx  SourceEditor.tsx  searchExtension.ts
src/components/Search/: SearchPanel.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/Toolbar/: Toolbar.tsx
src/hooks/: useAutoSave.ts  useEditorLayout.ts  usePlatformInitialization.ts
src/i18n/: config.ts  languageUtils.ts
src/i18n/locales/: en.json  zh.json
src/lib/: layoutCalculations.ts
src/stores/: settingsStore.ts  uiStore.ts
src/theme/: types.ts  utils.ts
