[package]
name = "MarkBear"
version = "0.1.0"
description = "A Tauri-based WYSIWYG Markdown editor"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-single-instance = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
regex = "1"
docx-rs = "0.4"
calamine = { version = "0.33", features = ["dates"] }
rust_xlsxwriter = "0.93"
pulldown-cmark = "0.13"
markdown2pdf = "0.2"
pdf-extract = "0.10"
zip = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
